--- a/main.html
+++ b/main.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Dog Breeds</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<ul>
-		<li>
-			<a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retriever" width="300">
-			</a>
-		</li>
-		<li>
-			<a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Poodle" width="300">
-		</li>
-	</ul>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>Learn About Dog Breeds</h1>
+    <ul>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
+                <img src="Golden_Retriever_img_link" alt="Golden Retriever" width="300">
+            </a>
+        </li>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
+                <img src="Poodle_img_link" alt="Poodle" width="300">
+            </a>
+        </li>
+    </ul>
 </body>
-
 </html>
