--- a/main.html
+++ b/main.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-    <title>Dog Breeds</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Learn About Dog Breeds</h1>
-    <ul>
-        <li>
-            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-                <img src="Golden_Retriever_img_link" alt="Golden Retriever" width="300">
-            </a>
-        </li>
-        <li>
-            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
-                <img src="Poodle_img_link" alt="Poodle" width="300">
-            </a>
-        </li>
-    </ul>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+<ul>
+	<li>
+	<a href="https://en.wikipedia.org/wiki/Golden_Retriever">	<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="image">
+	</a>
+	</li>
+	<li>
+	<a href="https://en.wikipedia.org/wiki/Poodle">	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" width="600px" alt="image">
+	</a>
+	</li>
+</ul>
 </body>
+
 </html>
